--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <ul>
                 <li><a href="" target="_Blank">Inicio</a></li>
                 <li><a href="" target="_blank" >Contacto</a></li>
+                <li><a href="" target="_blank" >Ayuda</a></li>
             </ul>
         </div>
 
